# kaggle-claude-mother

./: .CLAUDE.md  .gitignore  CLAUDE_CODE_IMPLEMENTATION_GUIDE.md  README.md  kaggle.json  main.py  monitor_service.py  plan_analyzer.md  plan_dynamic_competition_manager.md  plan_executor.md  plan_issue_safety_system.md  plan_monitor.md  plan_planner.md  plan_retrospective.md  pyproject.toml  service-control.sh  test_competition_filtering.py  test_issue_safety_system.py  test_llm_competition_selection.py  test_llm_enhanced_agents.py  test_llm_enhanced_system.py  test_llm_submission_decision.py  test_phase2_dynamic_manager.py  test_phase3_planner.py  test_phase4_analyzer.py  test_phase5_executor.py  test_plan_ai_agents.md  test_system_integration.py
.claude/commands/: k_find.md  k_init.md  start.md
.github/ISSUE_TEMPLATE/: 01_planner_strategy_analysis.md  02_analyzer_technical_analysis.md  03_executor_implementation_report.md  04_monitor_system_health.md  05_retrospective_learning_report.md  README.md  config.yml
config/: system.yaml
system/: competition_participation_manager.py  medal_optimization_strategy.md  participation_monitor.py
system/config/: system_config.py
system/dynamic_competition_manager/: __init__.py  dynamic_competition_manager.py
system/issue_safety_system/: __init__.py
system/orchestrator/: __init__.py  master_orchestrator.py
system/prompts/: analyzer_competitive_strategy.md  analyzer_grandmaster_solution_extraction.md  analyzer_implementation_roi_evaluation.md  analyzer_multi_stage_analysis_flow.md  analyzer_pattern_synthesis.md  analyzer_technical_analysis.md  executor_competitor_prediction.md  executor_experiment_strategy.md  executor_final_day_strategy.md  executor_multi_stage_decision_flow.md  executor_submission_decision.md  monitor_anomaly_diagnosis.md  monitor_auto_remediation.md  monitor_multi_stage_analysis_flow.md  monitor_pattern_recognition.md  planner_competition_deep_analysis.md  planner_winning_pattern_extraction.md  prompt_manager.py  retrospective_competition_analysis.md  retrospective_learning_extraction.md  retrospective_multi_stage_flow.md  (+1 more)
templates/: .pre-commit-config.yaml  pyproject.toml.template
(+74 files in other folders)
