[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaggle-claude-mother"
version = "0.1.0"
description = "Kaggleメダル獲得最優先のためのグランドマスター級攻略システム"
authors = [
    {name = "Claude Code", email = "noreply@anthropic.com"},
]
dependencies = [
    "asyncio",
    "aiohttp",
    "PyGithub",
    "github3.py",
    "redis",
    "filelock",
    "networkx",
    "requests",
    "pydantic",
    "python-dotenv",
    "uvloop",
    "tenacity",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyter",
    "kaggle",
    "croniter",
    "apscheduler",
    "psutil",
    "scipy",
]

[tool.hatch.build.targets.wheel]
packages = ["system"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true